# v_fixtures

./: Cargo.toml  README.md  flake.nix
.cargo/: rust-toolchain.toml
.github/workflows/: errors.yml
src/: config.rs  fs_standards.rs  lib.rs  main.rs
src/fs_standards/: git.rs  xdg.rs
