cargo-features = ["codegen-backend"]

[package]
name = "v_fixtures"
version = "0.3.2"
edition = "2024"
description = "Test fixture utilities for inline multi-file test cases with //- /path syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/valeratrades/v_fixtures"
keywords = ["testing", "fixtures", "snapshot", "test-utils"]
categories = ["development-tools::testing"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
derive-new = "0"
regex = "1"
tempfile = "3"
walkdir = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["fs"] }

[dev-dependencies]
insta = "1"

[lints.clippy]
tabs_in_doc_comments = "allow"
